2007-04-11  Justin Warren <daedalus@eigenmagic.com>
	* Minor bugfix in rfc1905.py after feedback from Phil Mayers
	* Changed example scripts to use any available python, not just 2.3
	
2006-10-07  Justin Warren <daedalus@eigenmagic.com>
	* Re-assigned copyright to Justin Warren.
	* License changed to MIT license instead of LGPL.
	* Version updated to 2.0.0

2006-06-20  Justin Warren <justin.warren@unicity.com.au>
	* Added basic debian package build files.
	
2005-06-16  Justin Warren <justin.warren@unicity.com.au>
	* Fixed minor bug in snmpwalk.
	* Changed traplistener and trapsender to use v2c SNMP via
	the v2 module.
	* Fixed bug in snmpmanager relating to the order in which
	messages are sent and received.
	* Fixed test_rfc1157.py to match new rfc1157 code.

2005-04-25  Jim Crumpler  <jgc@slug.jgc.unicity.com.au>

	* lib/libsnmp/rfc1155.py (asnTagNumbers): added toObjectID()
	function to Asn1Objects (for encoding as an index)
	* Fixed problems with __init__ stealing a reference to passed
	object.

2004-12-21  Jim Crumpler  <jgc@slug.jgc.unicity.com.au>

	* lib/libsnmp/rfc1155.py (ObjectID.__getitem__): supported
	sequence style functions on ObjectIDs - you can now slice and
	index.

2003-10-26  Justin Warren <justin.warren@unicity.com.au>
	* Added SNMPv2 support and fixed compatibility bugs caused
	by ucd-snmp returning Context Specific tags.

2003-09-21  Justin Warren <justin.warren@unicity.com.au>
    
	* Added licensing information to release under LGPL.

2003-09-19  Jim Crumpler  <jgc@pringle.jgc.unicity.com.au>

	* lib/libsnmp/rfc1155.py (OctetString.decodeContents): changed all
	decodeContents() methods to set the local value of the object and
	to return self.  This saves alot of object creations, however we
	need to make sure we don't use an object as a factory and expect
	its value to not change.

2003-09-18  Jim Crumpler  <jgc@pringle.jgc.unicity.com.au>

	* lib/libsnmp/rfc1155.py (Asn1Object.decode): move the tag and